FlightPath 6.x Changelog
========================

2021-11-19
  For the content type "schedule_unavailable_time", changed the ics url field to a textarea and text (in mysql) to be able to handle URLs longer than 255 chars.

  Fixed bug in install process where current schema of modules were not being set, causing the user to be told they need to run db updates even
  on first install.
  
  Enable almost all core modules on initial install.
  
  Modified smtp module so that if we send a blank message it will just not send (but log it) rather than show an error message.
  

2021-11-18
  Added "spinner" to submit button for duplicating an entire year of degree data.

  Watchdog page converted to use sortable table and pager query.  Also added severity as column.
  
  Fixed bug in major students progress report (wasn't paying attention to school properly)
  
  Fixed bug where if student's school wasn't set correctly, it would look it up upon object creation.
  

2021-11-16
  Gave "clear all cache" its own permission.
  
  Cleaning up CSS.


2021-11-02
  Added concept of "capacity" to course_search module (stored per-term in the course_rotation_schedule table).  Also added extra CSS when editing course schedule 
  information.


2021-10-28
  Fixed bug in course_search module where the filter for "view courses offered" (and you select the term) was not working as expected
  in all situations, because it was not taking the school_id into account.

  Made the users module filter selection more intuitive.  For example, the school selection, and the behavior when you search
  for a particular name, while a school is selected.  Plus, made sure not to reset ALL filters if you select a letter.  For example,
  you can now select a school, and then select by letters to see the students/users in that school.  The Major pulldown also gets altered
  based on selected school.  Also changed the order of the sub tabs so that Student Users comes second.



2021-10-27