@@ -27,11 +27,6 @@ function system_perm() {
       "description" => t("This will allow a user to install, enable, disable, and uninstall modules."),
     ),    
     
-    "clear_all_cache" => array(
-      "title" => t("Clear all cache"),
-      "description" => t("Allows the user to clear and refresh all FlightPath cache.  Only give to admin users."),
-    ),
-    
     "run_cron" => array(
       "title" => t("Run Cron"),
       "description" => t("The user may run hook_cron functions at will. Causes a new menu link to appear
@@ -348,7 +343,7 @@ function system_menu() {
     "title" => t("Clear all cache"),
     "description" => t("Clear and reset all cached items in FlightPath, including menu items, advising, etc."),
     "page_callback" => "system_perform_clear_cache",
-    "access_arguments" => array("clear_all_cache"),
+    "access_arguments" => array("administer_modules"),
     "type" => MENU_TYPE_NORMAL_ITEM,
     "page_settings" => array(
       "menu_icon" => fp_get_module_path('system') . "/icons/arrow_refresh.png",      
@@ -1027,10 +1022,15 @@ function system_display_install_finished_page() {
 function system_popup_report_contact_thank_you() {
   $rtn = "";
   
-  $rtn .= fp_render_section_title(t("Contact the @FlightPath Production Team", array("@FlightPath" => variable_get("system_name", "FlightPath"))));
-  $rtn .= t("Thank you for submitting to the @FlightPath Production Team.  They 
+  //$rtn .= fp_render_section_title(t("Contact the @FlightPath Production Team", array("@FlightPath" => variable_get("system_name", "FlightPath"))));
+  
+  $rtn .= "<p>";
+  
+  $rtn .= t("Thank you for submitting to the @FlightPath Production Team.  We 
              have received your comment and will review it shortly.", array("@FlightPath" => variable_get("system_name", "FlightPath"))) . "<br><br>";
   $rtn .= t("You may now close this window.");
+  
+  $rtn .= "</p>";
   
   return $rtn;
 }
@@ -1046,9 +1046,11 @@ function system_popup_report_contact_form() {
   fp_set_title("");
   $m = 0;
   
+  /*
   $form["mark" . $m++] = array(
     "value" => fp_render_section_title(t("Contact the @FlightPath Production Team", array("@FlightPath" => variable_get("system_name", "FlightPath")))),
   );
+  */
   
   if (!user_has_permission("access_logged_in_content")) {
     $form["mark" . $m++] = array(
@@ -1059,8 +1061,8 @@ function system_popup_report_contact_form() {
   }
   
   $form["mark" . $m++] = array(
-    "value" => t("If you've noticed an error or have a suggestion, use this
-                  form to contact the @FlightPath Production Team.", array("@FlightPath" => variable_get("system_name", "FlightPath"))),
+    "value" => "<p>" . t("If you've noticed an error or have a suggestion, use this
+                  form to contact the @FlightPath Production Team.", array("@FlightPath" => variable_get("system_name", "FlightPath"))) . "</p>",
   );  
   
   $form["category"] = array(
@@ -1077,17 +1079,20 @@ function system_popup_report_contact_form() {
                      t("Audit") => t("Audit"),
                      t("Engagements") => t("Engagements"),
                      t("Sending/Receiving TXT") => t("Sending/Receiving TXT"),
+                     t("Reports") => t("Reports/Analytics"),
                      t("Other") => t("Other"),
                       ),
   );
 
   $form["comment"] = array(
     "type" => "textarea",
+    "rows" => 7,
     "label" => t("Comment:"),    
   );
   
   $form["submit"] = array(
     "type" => "submit",
+    "spinner" => TRUE,
     "value" => t("Send email"),    
   );  
   
@@ -3722,9 +3727,8 @@ function system_render_advising_snapshop_for_iframe() {
   if (isset($_REQUEST['selected_school_id'])) $selected_school_id = intval($_REQUEST['selected_school_id']);
   
       
-  // Get total number of advisees VS number that have been advised for current term.
-  // Since this can take a while to load, maybe it loads by javascript async instead?  Or maybe its an iframe which can also be async?
-  $adv_array = student_search_display_my_advisees(TRUE, NULL, $selected_school_id);  
+  // Get total number of advisees VS number that have been advised for current term.  
+  $adv_array = student_search_display_my_advisees(TRUE, NULL, $selected_school_id, 9999999);  // We want to get ALL advisees, so we set the limit very high.
   $total = count($adv_array);
   
   $advised_count = 0;
